// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`form body file 1`] = `
"// Auto-generated by the postman-to-k6 converter

import "./libs/shim/core.js";
import http from "k6/http";

export let options = { maxRedirects: 4 };

const Request = Symbol.for("request");
postman[Symbol.for("initial")]({
  options
});

const files = {};
files["theultimatequestion.txt"] = http.file(
  open("theultimatequestion.txt", "b"),
  "theultimatequestion.txt"
);

export default function() {
  postman[Request]({
    name: "TestFileUpload",
    method: "POST",
    address: "http://deepthought.test/",
    data: {
      file: files["theultimatequestion.txt"]
    }
  });
}
"
`;

exports[`form body text 1`] = `
"// Auto-generated by the postman-to-k6 converter

import "./libs/shim/core.js";

export let options = { maxRedirects: 4 };

const Request = Symbol.for("request");
postman[Symbol.for("initial")]({
  options
});

export default function() {
  postman[Request]({
    name: "TestRequest",
    method: "POST",
    address: "http://example.com/",
    data: {
      first: "one",
      second: "two",
      third: "three"
    }
  });
}
"
`;

exports[`iterations 1`] = `
"// Auto-generated by the postman-to-k6 converter

import "./libs/shim/core.js";

export let options = { maxRedirects: 4, iterations: 25 };

const Request = Symbol.for("request");
postman[Symbol.for("initial")]({
  options
});

export default function() {
  postman[Request]({
    name: "TestRequest",
    method: "GET",
    address: "http://example.com/"
  });
}
"
`;

exports[`multiple requests 1`] = `
"// Auto-generated by the postman-to-k6 converter

import "./libs/shim/core.js";
import { group } from "k6";

export let options = { maxRedirects: 4 };

const Request = Symbol.for("request");
postman[Symbol.for("initial")]({
  options
});

export default function() {
  group("Widgets", function() {
    postman[Request]({
      name: "Get Widget",
      method: "GET",
      address: "http://localhost:4010/widget",
      headers: {
        "X-Correlation-Id": "{{$randomUUID}}",
        TimeStamp: "{{timestamp}}",
        "Content-Signature": "{{signature_key}}"
      },
      auth(config, Var) {
        config.headers.Authorization = "Bearer access_token";
      }
    });
  });

  group("Widget", function() {
    postman[Request]({
      name: "Create Widget",
      method: "POST",
      address: "http://localhost:4010/widget",
      data:
        '{\\n    "isLogin": true,\\n    "widget_id": "0",\\n    "callFrom": "my-tax"\\n}',
      headers: {
        "X-Correlation-Id": "{{$randomUUID}}",
        "Content-Signature": "{{signature_key}}"
      }
    });
  });
}
"
`;

exports[`no body alternate 1`] = `
"// Auto-generated by the postman-to-k6 converter

import "./libs/shim/core.js";

export let options = { maxRedirects: 4 };

const Request = Symbol.for("request");
postman[Symbol.for("initial")]({
  options
});

export default function() {
  postman[Request]({
    name: "TestRequest",
    method: "GET",
    address: "http://example.com/"
  });
}
"
`;

exports[`raw body 1`] = `
"// Auto-generated by the postman-to-k6 converter

import "./libs/shim/core.js";

export let options = { maxRedirects: 4 };

const Request = Symbol.for("request");
postman[Symbol.for("initial")]({
  options
});

export default function() {
  postman[Request]({
    name: "TestRequest",
    method: "POST",
    address: "http://example.com/",
    data: "line1\\nline2\\nline3\\n"
  });
}
"
`;

exports[`request 1`] = `
"// Auto-generated by the postman-to-k6 converter

import "./libs/shim/core.js";

export let options = { maxRedirects: 4 };

const Request = Symbol.for("request");
postman[Symbol.for("initial")]({
  options
});

export default function() {
  postman[Request]({
    name: "TestRequest",
    method: "GET",
    address: "http://example.com/"
  });
}
"
`;

exports[`url body 1`] = `
"// Auto-generated by the postman-to-k6 converter

import "./libs/shim/core.js";

export let options = { maxRedirects: 4 };

const Request = Symbol.for("request");
postman[Symbol.for("initial")]({
  options
});

export default function() {
  postman[Request]({
    name: "TestRequest",
    method: "POST",
    address: "http://example.com/",
    data: {
      first: "one",
      second: "two",
      third: "three"
    },
    headers: {
      "Content-Type": "application/x-www-form-urlencoded"
    }
  });
}
"
`;
